<resources>
    <string name="personalization_partner_tag">com_samsung_t0</string>
    <string name="personalization_server_base_url">https://samsung-personalization.touchtype-fluency.com</string>
    <string name="personalization_server_delete_url">https://samsung-personalisation-delete.touchtype-fluency.com</string>
    <string name="touchtype_login_success_url">http://www.touchtype-online.com/login_success.html</string>
    <string name="twitter_request_token_url">http://api.twitter.com/oauth/request_token</string>
    <string name="twitter_access_token_url">http://api.twitter.com/oauth/access_token</string>
    <string name="twitter_authorize_url">http://api.twitter.com/oauth/authorize</string>
    <string name="gmail_request_token_url">https://www.google.com/accounts/OAuthGetRequestToken?scope=</string>
    <string name="word_cn">中</string>
    <string name="word_cn_hk">HK</string>
    <string name="dialog_title_list_preference">SCH-TCH Switch</string>
    <string name="setting_peroid_shortcut_title">Auto punctuate</string>
    <string name="setting_peroid_shortcut_summary">Automatically insert a full stop by tapping the space bar twice when using Qwerty keyboard</string>
    <string name="setting_portrait_input_mode_summary">To set up preferred input modes as tab</string>
    <string name="setting">Samsung Chinese IME setting</string>
    <string name="setting_about_title">About</string>
    <string name="setting_about_unknown">Unknown</string>
    <string name="setting_advanced">Advanced</string>
    <string name="setting_auto_capitalization_summary">Automatically capitalise first letter of sentence</string>
    <string name="setting_auto_capitalization_title">Auto Capitalisation</string>
    <string name="setting_auto_fullstop_summary">Automatically insert a full stop by tapping the space bar twice when using Qwerty keyboard</string>
    <string name="setting_auto_fullstop_title">Auto-punctuate</string>
    <string name="setting_char_preview_title">Character preview</string>
    <string name="setting_convert_title">SCH-TCH Switch</string>
    <string name="setting_db_update_title">Word database update</string>
    <string name="setting_db_update_setting">Database update setting</string>
    <string name="setting_db_update_twchinese_dict_title">Chinese(TW)</string>
    <string name="setting_db_update_hkchinese_dict_title">Chinese(HK)</string>
    <string name="setting_db_update_schinese_dict_title">Chinese(Simplified)</string>
    <string name="setting_db_update_english_dict_title">English</string>
    <string name="setting_db_update_popular_dict_title">Popular Words</string>
    <string name="setting_db_update_restore_default">Restore default word database</string>
    <string name="setting_disabled">Disabled</string>
    <string name="setting_enabled">Enabled</string>
    <string name="setting_feedback_title">Feedback</string>
    <string name="setting_fuzzy_pinyin_ang_an_title">ang = an</string>
    <string name="setting_general_title">General</string>
    <string name="setting_handwrite">Handwriting setting</string>
    <string name="setting_handwrite_color_titile">Color</string>
    <string name="setting_handwrite_line_titile">Thickness</string>
    <string name="setting_handwrite_speed_titile">Recognition rate</string>
    <string name="setting_handwriting_style_titile">Handwriting style</string>
    <string name="setting_keypad_type_title">Keyboard type settings</string>
    <string name="setting_language">Input Language</string>
    <string name="setting_language_summary">Input Language</string>
    <string name="setting_link_to_contacts_summary">Display contact in candidate window to quickly bring the contact information</string>
    <string name="setting_link_to_contacts_title">Link to contacts</string>
    <string name="setting_one_hand_mode_key">one_hand_mode_key</string>
    <string name="setting_one_hand_mode_title">One-handed operation</string>
    <string name="setting_one_hand_mode_summary">Set your keyboard for use with one hand</string>
    <string name="setting_pointing_keyboard_summary">Move cursor by sliding finger across keyboard</string>
    <string name="setting_pointing_keyboard_title">Pointing keyboard</string>
    <string name="setting_portrait_input_mode_english_title">English</string>
    <string name="setting_prediction_title">English Prediction</string>
    <string name="setting_predictive_text">Predictive text</string>
    <string name="setting_qwerty_correct_summary">Touch error can be automatically corrected on Qwerty keypad</string>
    <string name="setting_qwerty_correct_title">Input auto correction</string>
    <string name="setting_reset_setting_title">Reset settings</string>
    <string name="setting_simple">SCH</string>
    <string name="setting_sound_keypress_title">Sound on keypress</string>
    <string name="setting_space_input_title">Space key to input association</string>
    <string name="setting_version_title">Version</string>
    <string name="setting_vibrate_keypress_title">Vibrate on keypress</string>
    <string name="setting_voice_input_summary">Provide button for voice input in keypad</string>
    <string name="setting_voice_input_title">Voice Input</string>
    <string name="setting_about_key">setting_about_key</string>
    <string name="setting_advanced_summary_key">setting_advanced_summary_key</string>
    <string name="setting_auto_capitalization_key">setting_auto_capitalization_key</string>
    <string name="setting_auto_fullstop_key">setting_auto_fullstop_key</string>
    <string name="setting_char_preview_key">setting_char_preview_key</string>
    <string name="setting_convert_key">setting_convert_key</string>
    <string name="setting_db_update_key">setting_db_update_key</string>
    <string name="setting_db_update_twchinese_dict_key">setting_db_update_twchinese_dict_key</string>
    <string name="setting_db_update_hkchinese_dict_key">setting_db_update_hkchinese_dict_key</string>
    <string name="setting_db_update_schinese_dict_key">setting_db_update_schinese_dict_key</string>
    <string name="setting_db_update_english_dict_key">setting_db_update_english_dict_key</string>
    <string name="setting_db_update_popular_dict_key">setting_db_update_popular_dict_key</string>
    <string name="setting_db_update_restore_key">setting_db_update_restore_key</string>
    <string name="setting_feedback_Category_key">setting_feedback_Category_key</string>
    <string name="setting_fuzzy_pinyin_ang_an_key">setting_fuzzy_pinyin_ang_an_key</string>
    <string name="setting_fuzzy_pinyin_ch_c_key">setting_fuzzy_pinyin_ch_c_key</string>
    <string name="setting_fuzzy_pinyin_eng_en_key">setting_fuzzy_pinyin_eng_en_key</string>
    <string name="setting_fuzzy_pinyin_h_f_key">setting_fuzzy_pinyin_h_f_key</string>
    <string name="setting_fuzzy_pinyin_ing_in_key">setting_fuzzy_pinyin_ing_in_key</string>
    <string name="setting_fuzzy_pinyin_n_l_key">setting_fuzzy_pinyin_n_l_key</string>
    <string name="setting_fuzzy_pinyin_r_l_key">setting_fuzzy_pinyin_r_l_key</string>
    <string name="setting_fuzzy_pinyin_sh_s_key">setting_fuzzy_pinyin_sh_s_key</string>
    <string name="setting_fuzzy_pinyin_zh_z_key">setting_fuzzy_pinyin_zh_z_key</string>
    <string name="setting_language_summary_key">setting_language_summary_key</string>
    <string name="setting_link_to_contacts_key">setting_link_to_contacts_key</string>
    <string name="setting_handwrite_color_key">setting_handwrite_color_key</string>
    <string name="setting_handwrite_line_key">setting_handwrite_line_key</string>
    <string name="setting_handwrite_speed_key">setting_handwrite_speed_key</string>
    <string name="setting_handwrite_summary_key">setting_handwrite_summary_key</string>
    <string name="setting_handwriting_style_key">setting_handwriting_style_key</string>
    <string name="setting_key">setting_key</string>
    <string name="setting_keypad_type_key">setting_keypad_type_key</string>
    <string name="setting_keyboard_swipe_key">setting_keyboard_swipe_key</string>
    <string name="setting_keyboard_swipe_key_title">Swipe on keyboard</string>
    <string name="setting_pointing_keyboard_key">setting_pointing_keyboard_key</string>
    <string name="setting_portrait_english_input_mode_key">setting_portrait_english_input_mode_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_qwerty_correct_error_key">setting_qwerty_correct_error_key</string>
    <string name="setting_reset_setting_key">setting_reset_setting_key</string>
    <string name="setting_sound_keypress_key">setting_sound_keypress_key</string>
    <string name="setting_space_input_key">setting_space_input_key</string>
    <string name="setting_vibrate_keypress_key">setting_vibrate_keypress_key</string>
    <string name="setting_voice_input_key">setting_voice_input_key</string>
    <string name="toggle_lowercase">5</string>
    <string name="toggle_row_cn_hk">103</string>
    <string name="toggle_row_cn_hk_no_voice">121</string>
    <string name="toggle_row_ko">15</string>
    <string name="toggle_row_url">17</string>
    <string name="toggle_templowercase">6</string>
    <string name="setting_fuzzy_pinyin_ch_c_title">ch = c</string>
    <string name="setting_fuzzy_pinyin_eng_en_title">eng = en</string>
    <string name="setting_fuzzy_pinyin_h_f_title">h = f</string>
    <string name="setting_fuzzy_pinyin_ing_in_title">ing = in</string>
    <string name="setting_fuzzy_pinyin_input_title">Fuzzy Pinyin Input</string>
    <string name="setting_fuzzy_pinyin_n_l_title">n = l</string>
    <string name="setting_fuzzy_pinyin_r_l_title">r = l</string>
    <string name="setting_fuzzy_pinyin_sh_s_title">sh = s</string>
    <string name="setting_fuzzy_pinyin_zh_z_title">zh = z</string>
    <string name="pref_clear_personalised_data_key">pref_clear_personalised_data_key</string>
    <string name="pref_personalize_sources_category_key">pref_personalize_sources_category_key</string>
    <string name="personalize_use_personalised_data_key">personalize_use_personalised_data_key</string>
    <string name="pref_personalize_weibo">pref_personalize_weibo</string>
    <string name="pref_personalize_gmail">pref_personalize_gmail</string>
    <string name="pref_personalize_facebook">pref_personalize_facebook</string>
    <string name="pref_personalize_twitter">pref_personalize_twitter</string>
    <string name="personalization_title">Personalisation</string>
    <string name="personalize_facebook_title">Learn from Facebook</string>
    <string name="personalize_weibo_title">Learn from Weibo</string>
    <string name="personalize_gmail_title">Learn from Gmail</string>
    <string name="personalize_twitter_title">Learn from Twitter</string>
    <string name="personalize_facebook_subtitle">Log in to let your device learn your Facebook style</string>
    <string name="personalize_gmail_subtitle">Log in to let your device learn your Gmail style</string>
    <string name="personalize_twitter_subtitle">Log in to let your device learn your Twitter style</string>
    <string name="personalize_weibo_subtitle">Log in to let your device learn your Weibo style</string>
    <string name="personalize_use_personalised_data_title">Personalised data</string>
    <string name="personalize_use_personalised_data_summary">Use the personal language data that you have entered to make the prediction result better</string>
    <string name="personalize_privacy_preference_title">Privacy</string>
    <string name="pref_clear_personalised_data_title">Clear personalised data</string>
    <string name="pref_clear_personalised_data_summary">Remove all personal language data</string>
    <string name="pref_clear_personalised_data_dialog_msg">If you continue, you will lose everything that Samsung Chinese IME has learnt about your writing style, including any new words you have used. Continue?</string>
    <string name="predictive_text_title">Predictive text</string>
</resources>