<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/setting_portrait_input_mode_title" android:key="@string/setting_portrait_input_mode_key" android:summary="@string/setting_portrait_input_mode_summary" android:widgetLayout="@layout/settings_layout_more_button" />
    <SwitchPreference android:persistent="true" android:title="@string/setting_space_input_title" android:key="@string/setting_space_input_key" />
    <Preference android:title="@string/setting_fuzzy_pinyin_input_title" android:key="setting_fuzzy_pinyin_input_key"
      xmlns:android="http://schemas.android.com/apk/res/android" />
    <Preference android:title="@string/setting_handwrite" android:key="setting_handwrite_summary_key"
      xmlns:android="http://schemas.android.com/apk/res/android" />
    <SwitchPreference android:persistent="true" android:title="@string/setting_prediction_title" android:key="@string/setting_prediction_key" />
    <SwitchPreference android:persistent="false" android:title="@string/setting_auto_capitalization_title" android:key="@string/setting_auto_capitalization_key" android:summary="@string/setting_auto_capitalization_summary" />
    <SwitchPreference android:persistent="true" android:title="@string/setting_peroid_shortcut_title" android:key="@string/setting_auto_fullstop_key" android:summaryOn="@string/setting_peroid_shortcut_summary" android:summaryOff="@string/setting_peroid_shortcut_summary" />
    <SwitchPreference android:persistent="true" android:title="@string/setting_char_preview_title" android:key="@string/setting_char_preview_key" />
    <SwitchPreference android:persistent="true" android:title="@string/setting_voice_input_title" android:key="@string/setting_voice_input_key" android:summary="@string/setting_voice_input_summary" />
    <SwitchPreference android:persistent="true" android:title="@string/setting_link_to_contacts_title" android:key="@string/setting_link_to_contacts_key" android:summary="@string/setting_link_to_contacts_summary" />
    <SwitchPreference android:persistent="false" android:title="@string/setting_sound_keypress_title" android:key="@string/setting_sound_keypress_key" />
    <Preference android:title="@string/setting_reset_setting_title" android:key="@string/setting_reset_setting_key" android:widgetLayout="@layout/settings_layout_more_button" />
    <Preference android:title="@string/setting_about_title" android:key="@string/setting_about_key" android:summary="@string/setting_about_unknown" style="?android:preferenceInformationStyle" />
</PreferenceScreen>