<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/setting_db_update_setting" android:key="setting_db_update_setting_prefrence_key"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_db_update_twchinese_dict_title" android:key="@string/setting_db_update_twchinese_dict_key" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_db_update_hkchinese_dict_title" android:key="@string/setting_db_update_hkchinese_dict_key" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_db_update_schinese_dict_title" android:key="@string/setting_db_update_schinese_dict_key" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_db_update_english_dict_title" android:key="@string/setting_db_update_english_dict_key" />
    <CheckBoxPreference android:persistent="true" android:title="@string/setting_db_update_popular_dict_title" android:key="@string/setting_db_update_popular_dict_key" />
    <Preference android:title="@string/setting_db_update_restore_default" android:key="@string/setting_db_update_restore_key" />
</PreferenceScreen>